# StudyBoard

./: README.md  pyproject.toml
dashboard/: admin.py  forms.py  models.py  urls.py  views.py
dashboard/migrations/: 0001_initial.py
dashboard/templates/dashboard/: books.html  conversion.html  dictionary.html  home.html  homework.html  login.html  logout.html  notes.html  profile.html  register.html  todo.html  wiki.html  youtube.html
studyboard/: settings.py  urls.py
templates/: main.html  navbar.html
